# dcap

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini
configs/: preprocessing.yaml
data/: iphoneme.csv
data/diapix/: README.md  annotation_completion.tsv  audio_onsets.tsv
docs/: DIAPIX_NEW_DATA_WORKFLOW.md  PATIENT_REPORT_GENERATION.md  PROJECT_SPEC.md  SORCIERE_NEW_DATA_WORKFLOW.md  TODO.md  TRF.md
docs/registry/: README.md  dcap_private_metadata_workflow.md  public_schema.md
docs/registry/schema/: SPEC_subject.schema.yaml  (+3 more)
examples/: trf_cv_strategies.py  trf_simulated_recovery.py
scripts/: concat_wav.py  kfold_trf.py  split_textgrids.py
src/dcap/: __init__.py  config.py
src/dcap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_bids.py  test_cli.py  test_imports.py  test_registry.py  test_registry_private.py
tests/bids/: test_bids_anat.py  test_bids_init.py
tests/cli/: test_check.py  test_main.py
tests/errors/: test_errors_smoke.py  test_policy.py  test_record.py  test_types.py
tests/features/: test_postprocess.py
tests/integration/: test_registry_end_to_end.py
tests/private/: test_subjects.py
tests/qc/: test_validate.py
tests/registry/: test_build.py  test_ids.py  test_loader.py  test_products.py  test_queries.py  test_sanitize.py  test_schema.py  test_validate.py  test_view.py
tests/regression/: test_known_bugfix_cases.py
tests/seeg/: __init__.py
tests/utils/: test_utils_smoke.py
tests/viz/: test_api.py  test_electrodes.py  test_export.py  test_models.py  test_style.py
(+284 files in other folders)
