[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcap"
version = "0.1.0"
description = "Reusable tooling for clinically acquired sEEG datasets: BIDS, QC, preprocessing, registry."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mat73",
  "meegkit",
  "mne>=1.6",
  "mne-bids>=0.15",
  "nibabel",
  "numpy>=1.24",
  "pandas>=2.0",
  "pydab",
  "PyQt5",
  "pytest",
  "pyvistaqt",
  "ipywidgets",
  "pyyaml",
  "soundfile"
]

[project.scripts]
dcap = "dcap.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
